--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport"
         content="width=device-width">
-        <link href="random.css" rel="stylesheet" type="text/css">
+        <link href="email.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="main_container">
