--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="main_container">
         <div class="first">
-        <form action="https://formsubmit.co/aizekgulyam@gmail.com" method="POST" />
+        <form action="https://formsubmit.co/tnm.financialsolutions@email.com" method="POST" />
             
         <div class="header">
                 <p>Get in touch</p>
